--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #MYSQL
-spring.datasource.url = jdbc:mysql://localhost:3306/ajaxdb?createDatabaseIfNotExist=true&useSSL=true&serverTimezone=UTC
+spring.datasource.url= jdbc:mysql://localhost:3306/ajaxdb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -9,4 +9,5 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 
 #THYMELEAF
-spring.thymeleaf.cache= false
+spring.thymeleaf.cache= true
+
