--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns="http://maven.apache.org/POM/4.0.0">
 
@@ -118,6 +119,16 @@
 
 			<scope>runtime</scope>
 
+		</dependency>
+
+		<dependency>
+		
+			<groupId>org.directwebremoting</groupId>
+			
+			<artifactId>dwr</artifactId>
+			
+			<version>3.0.2-RELEASE</version>
+		
 		</dependency>
 
 
